// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinePrinter renders correctly with no segments 1`] = `
<DocumentFragment>
  <div
    class="sc-eCstZk dVbBMf"
    id="LinePrinter:0"
  >
    <span />
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with one segment where there are no more lines 1`] = `
<DocumentFragment>
  <div
    class="sc-eCstZk dVbBMf"
    id="LinePrinter:0"
  >
    <span />
    <span
      class="sc-gsTDqH brCFsH"
      id="SegmentPrinter:0"
    >
      <span
        class="sc-hKgKIp gVuSnU"
      />
      <div
        class="sc-bdfCDU blcbix"
        id="Cursor:0"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with two segment where there are additional lines to follow 1`] = `
<DocumentFragment>
  <div
    class="sc-eCstZk dVbBMf"
    id="LinePrinter:0"
  >
    <span />
    <span
      class="sc-gsTDqH brCFsH"
      id="SegmentPrinter:0"
    >
      <span
        class="sc-hKgKIp gVuSnU"
      />
      <div
        class="sc-bdfCDU blcbix"
        id="Cursor:0"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with two segment where there are no more lines 1`] = `
<DocumentFragment>
  <div
    class="sc-eCstZk dVbBMf"
    id="LinePrinter:0"
  >
    <span />
    <span
      class="sc-gsTDqH brCFsH"
      id="SegmentPrinter:0"
    >
      <span
        class="sc-hKgKIp gVuSnU"
      />
      <div
        class="sc-bdfCDU blcbix"
        id="Cursor:0"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;
